Bug 435240 - Panel sometimes gets shortened or remains floating in space when moving between screen edges
Summary: Panel sometimes gets shortened or remains floating in space when moving betwe...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: 5.21.3
Platform: Other Linux
: HI normal
Target Milestone: 1.0
Assignee: veggero
URL:
Keywords: regression
: 437433 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-04-01 22:38 UTC by Michał Zubkowicz
Modified: 2022-03-27 02:20 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michał Zubkowicz 2021-04-01 22:38:00 UTC
STEPS TO REPRODUCE
1. Move panels between edges


OBSERVED RESULT
Observe results like on this video:
https://www.dropbox.com/s/hhk0d5ztqog1zr1/vokoscreen-2021-04-02_00-31-17.mkv?dl=0
It stays floating (not on screen edge), or shortened for half screen. After move it's refloating position of elements which doesn't look nice.


SOFTWARE/OS VERSIONS
KDE Neon 5.21.3
Comment 1 Nate Graham 2021-04-02 00:27:23 UTC
I can confirm.
Comment 2 Nate Graham 2021-05-18 14:33:31 UTC
Niccolò, could I ask you to take a look into this? Would be nice to fix it before Plasma 5.22 is released.
Comment 3 veggero 2021-05-18 14:37:59 UTC
I'm afraid I won't be able to do it before 5.22, but I'll give it a shot :)
Comment 4 Nate Graham 2021-05-21 15:23:54 UTC
*** Bug 437433 has been marked as a duplicate of this bug. ***
Comment 5 Fushan Wen 2022-03-22 12:22:42 UTC
The problem could be in `void PanelView::restore()` in panelview.cpp.
Comment 6 Bug Janitor Service 2022-03-22 14:12:44 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1591
Comment 7 Fushan Wen 2022-03-25 00:38:45 UTC
Git commit 6a754b17a58cf1178883b0c660f9ced9c0525c65 by Fushan Wen.
Committed on 25/03/2022 at 00:24.
Pushed by fusionfuture into branch 'master'.

shell: Remove m_positionPaneltimer to avoid the toolbar from getting lost.

The delay causes the toolbar being unable to follow the panel sometimes.

M  +2    -10   shell/panelview.cpp
M  +0    -1    shell/panelview.h

https://invent.kde.org/plasma/plasma-workspace/commit/6a754b17a58cf1178883b0c660f9ced9c0525c65
Comment 8 Fushan Wen 2022-03-25 00:38:53 UTC
Git commit 9d08b9979f04235c786f7b0e1baacc3751fa0479 by Fushan Wen.
Committed on 25/03/2022 at 00:24.
Pushed by fusionfuture into branch 'master'.

shell: Fix panel sometimes getting shortened when dragging

`positionPanel()` must be called first to make sure formFactor is
updated, or `maxSize` will be incorrect.

M  +3    -2    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/9d08b9979f04235c786f7b0e1baacc3751fa0479