shell: Fix panel sometimes getting shortened when dragging

`positionPanel()` must be called first to make sure formFactor is
updated, or `maxSize` will be incorrect.

BUG: 435240